--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,16 @@
 @import './reset.scss';
+
+//滚动条外观设置
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: $base-menu-background;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: yellowgreen;
+  border-radius: 10px;
+}
