feat: logo component

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,5 +1,7 @@
 // $base-color: red
 
-$base-menu-width: 260px;
-$base-tabbar-height: 30px;
-$base-menu-background: skyblue;
+$base-menu-width: 260px; // 侧边栏的宽度
+$base-tabbar-height: 50px; //顶部菜单栏高度
+$base-menu-background: #001529; //菜单背景色
+$base-menu-logo-height: 50px; // 左侧logo高度
+$base-logo-title-fontSize: 16px; // 左侧logo文字大小
