feat: fold side bar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,6 @@
 
 ::-webkit-scrollbar-thumb {
   width: 10px;
-  background-color: yellowgreen;
+  background-color: gray;
   border-radius: 10px;
 }
