--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,6 +1,5 @@
-// $base-color: red
-
 $base-menu-width: 260px; // 侧边栏的宽度
+$base-menu-min-width: 64px; // 侧边栏的折叠宽度
 $base-tabbar-height: 50px; //顶部菜单栏高度
 $base-menu-background: #001529; //菜单背景色
 $base-menu-logo-height: 50px; // 左侧logo高度
